// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-0" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                common: {
                    name: 'common',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 2
                },

                vendor: {
                    name: 'vendor',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 2
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-1" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                common: {
                    name: 'common',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 2
                },

                vendor: {
                    name: 'vendor',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 2
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-2" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                vendor: {
                    name: 'vendor',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 1
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-3" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                commons: {
                    name: 'commons',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 1,
                    filename: 'commons.js'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-4" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            chunks: 'async',
            minSize: 2000,

            cacheGroups: {
                main: {
                    name: 'main',
                    minChunks: 1
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-5" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 1
                }
            }
        },

        runtimeChunk: {
            name: 'runtime'
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-6a" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 1,
                    test: ({ resource }) => /node_modules/.test(resource)
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-6b" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 1,

                    test: ({ resource }) => {
                        var foo = \\"bar\\";
                        return /node_modules/.test(resource);
                    }
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-6c" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 1,

                    test: function ({ resource }) {
                        var foo = \\"bar\\";
                        return /node_modules/.test(resource);
                    }
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-6d" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 1,

                    test: function ({ resource }) {
                        var foo = \\"bar\\";
                        if (foo) {
                            return /node_modulesfoo/.test(resource);
                        } else if (foo === \\"something\\") {
                            return /node_modulesbar/.test(resource);
                        } else {
                            return /node_modulesbaz/.test(resource);
                        }
                    }
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-7" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 2
                },

                vendor: {
                    name: 'vendor',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 2
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-11" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            minSize: 3000,

            cacheGroups: {
                main: {
                    name: 'main',
                    chunks: 'initial',
                    enforce: true,
                    minChunks: 1
                }
            }
        }
    }
}
"
`;
